k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gameday-workflow-travel
  namespace: gameday-workflow
  labels:
    app: gameday-workflow-travel
spec:
  type: ClusterIP
  ports:
    - port: 8004
      targetPort: 8004
      protocol: TCP
      name: http
  selector:
    app: gameday-workflow-travel
